---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/equality-ops/test_ptr_neq.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/equality-ops/test_ptr_neq.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `int` ∅)
         (declaration y~3 `int` ∅)
         (return (not-equal (addressof (name x~2 `int`)) (addressof (name y~3 `int`)))))))

----- stderr -----
